# batch-sales-transactions

./: .env.example  .gitignore  Dockerfile  README.md  batch sales transactions.postman_collection.json  conftest.py  docker-compose.yml  main.py  pyproject.toml
apps/transactions/: apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py
apps/transactions/tests/: factories.py  test_middleware.py  test_models.py  test_serializers.py  test_views.py
config/: settings.py
docs/: part-2-data-engineering-sql.md  part-3-azure-data-ecosystem.md  part-4-architecture-strategy.md
